[tool.poetry]
name = "wp3-api"
version = "0.1.0"
description = ""
authors = ["David <davidverweij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
build = "cli:build"
version = "cli:version"
bump = "cli:bump"
publish = "cli:publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

