[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["David <davidverweij@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
black = "^21.12b0"
flake8 = "^4.0.1"
flake8-aaa = "^0.12.0"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.930"
coverage = {version = "^6.2", extras = ["toml"]}
pytest-cov = "^3.0.0"
nox = "^2021.10.1"
nox-poetry = "^0.9.0"


[tool.poetry.scripts]
build = "cli:build"
version = "cli:version"
bump = "cli:bump"
publish = "cli:publish"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

